<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe5fd"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic__pause"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintLeft_toRightOf="@id/back"
            app:layout_constraintRight_toLeftOf="@id/time"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:padding="4dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Chronometer
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintLeft_toRightOf="@id/back"
            app:layout_constraintRight_toLeftOf="@id/shuffleButton"
            app:layout_constraintTop_toTopOf="@id/back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sound"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_sound_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/shuffleButton"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shuffleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_shuffle"
            app:layout_constraintBottom_toBottomOf="@id/sound"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/moves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/font_roboto_mono"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/moves"
        android:textColor="#000"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <TextView
            android:id="@+id/btn1"
            style="@style/cell_style"
            android:background="@drawable/bg_cell1"
            app:layout_constraintBottom_toTopOf="@id/btn5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/one" />

        <TextView
            android:id="@+id/btn2"
            style="@style/cell_style"
            android:background="@drawable/bg_cell2"
            app:layout_constraintBottom_toTopOf="@id/btn6"
            app:layout_constraintLeft_toRightOf="@id/btn1"
            app:layout_constraintRight_toLeftOf="@id/btn3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/two" />

        <TextView
            android:id="@+id/btn3"
            style="@style/cell_style"
            android:background="@drawable/bg_cell3"
            app:layout_constraintBottom_toTopOf="@id/btn7"
            app:layout_constraintLeft_toRightOf="@id/btn2"
            app:layout_constraintRight_toLeftOf="@id/btn4"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/three" />

        <TextView
            android:id="@+id/btn4"
            style="@style/cell_style"
            android:background="@drawable/bg_cell4"
            app:layout_constraintBottom_toTopOf="@id/btn8"
            app:layout_constraintLeft_toRightOf="@id/btn3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/four" />

        <TextView
            android:id="@+id/btn5"
            style="@style/cell_style"
            android:background="@drawable/bg_cell5"
            app:layout_constraintBottom_toTopOf="@id/btn9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn6"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            tools:text="@string/five" />

        <TextView
            android:id="@+id/btn6"
            style="@style/cell_style"
            android:background="@drawable/bg_cell6"
            app:layout_constraintBottom_toTopOf="@id/btn10"
            app:layout_constraintLeft_toRightOf="@id/btn5"
            app:layout_constraintRight_toLeftOf="@id/btn7"
            app:layout_constraintTop_toBottomOf="@id/btn2"
            tools:text="@string/six" />

        <TextView
            android:id="@+id/btn7"
            style="@style/cell_style"
            android:background="@drawable/bg_cell7"
            app:layout_constraintBottom_toTopOf="@id/btn11"
            app:layout_constraintLeft_toRightOf="@id/btn6"
            app:layout_constraintRight_toLeftOf="@id/btn8"
            app:layout_constraintTop_toBottomOf="@id/btn3"
            tools:text="@string/seven" />

        <TextView
            android:id="@+id/btn8"
            style="@style/cell_style"
            android:background="@drawable/bg_cell8"
            app:layout_constraintBottom_toTopOf="@id/btn12"
            app:layout_constraintLeft_toRightOf="@id/btn7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            tools:text="@string/eight" />

        <TextView
            android:id="@+id/btn9"
            style="@style/cell_style"
            android:background="@drawable/bg_cell9"
            app:layout_constraintBottom_toTopOf="@id/btn13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn10"
            app:layout_constraintTop_toBottomOf="@id/btn5"
            tools:text="@string/nine" />

        <TextView
            android:id="@+id/btn10"
            style="@style/cell_style"
            android:background="@drawable/bg_cell10"
            app:layout_constraintBottom_toTopOf="@id/btn14"
            app:layout_constraintLeft_toRightOf="@id/btn9"
            app:layout_constraintRight_toLeftOf="@id/btn11"
            app:layout_constraintTop_toBottomOf="@id/btn6"
            tools:text="@string/ten" />

        <TextView
            android:id="@+id/btn11"
            style="@style/cell_style"
            android:background="@drawable/bg_cell11"
            app:layout_constraintBottom_toTopOf="@id/btn15"
            app:layout_constraintLeft_toRightOf="@id/btn10"
            app:layout_constraintRight_toLeftOf="@id/btn12"
            app:layout_constraintTop_toBottomOf="@id/btn7"
            tools:text="@string/eleven" />

        <TextView
            android:id="@+id/btn12"
            style="@style/cell_style"
            android:background="@drawable/bg_cell12"
            app:layout_constraintBottom_toTopOf="@id/btn16"
            app:layout_constraintLeft_toRightOf="@id/btn11"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn8"
            tools:text="@string/twelve" />

        <TextView
            android:id="@+id/btn13"
            style="@style/cell_style"
            android:background="@drawable/bg_cell13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn14"
            app:layout_constraintTop_toBottomOf="@id/btn9"
            tools:text="@string/thirteen" />

        <TextView
            android:id="@+id/btn14"
            style="@style/cell_style"
            android:background="@drawable/bg_cell14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn13"
            app:layout_constraintRight_toLeftOf="@id/btn15"
            app:layout_constraintTop_toBottomOf="@id/btn10"
            tools:text="@string/fourteen" />

        <TextView
            android:id="@+id/btn15"
            style="@style/cell_style"
            android:background="@drawable/bg_cell15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn14"
            app:layout_constraintRight_toLeftOf="@id/btn16"
            app:layout_constraintTop_toBottomOf="@id/btn11"
            tools:text="@string/fifteen" />

        <TextView
            android:id="@+id/btn16"
            style="@style/cell_style"
            android:background="@drawable/bg_cell16"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn12"
            tools:text="@string/sixteen" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/pauseVisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="#CCEFE5FD"
        android:visibility="invisible">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playButton"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:clickable="true"
            android:focusable="true"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="#673AB7"
            app:strokeWidth="3dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_play_button_png"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
