<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efe5fd"
        android:orientation="vertical"
        android:weightSum="10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menu_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic__15teenlogo_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <Space-->
<!--            android:id="@+id/space"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_selector1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_roboto_mono"
                android:gravity="center"
                android:padding="10dp"
                android:shadowColor="#80000000"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/startGame"
                android:textColor="#efe5fd"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@id/results"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/results"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_selector2"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_roboto_mono"
                android:gravity="center"
                android:padding="10dp"
                android:shadowColor="#80000000"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/results"
                android:textColor="#efe5fd"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@id/about"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_selector3"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_roboto_mono"
                android:gravity="center"
                android:padding="10dp"
                android:shadowColor="#80000000"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/about"
                android:textColor="#efe5fd"
                android:textSize="26sp"
                app:layout_constraintBottom_toTopOf="@id/exit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/results" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/exit"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_selector4"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/font_roboto_mono"
                android:gravity="center"
                android:padding="10dp"
                android:shadowColor="#000"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/exit"
                android:textColor="#efe5fd"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.65"
            android:layout_marginBottom="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_roboto_mono"
                android:gravity="bottom|center"
                android:text="@string/bottomBar"
                android:textSize="12sp" />
        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>